# Auto-Patrol

./: CMakeLists.txt  README.md  package.xml
config/: cam1_params.yaml
include/auto_patrol/: ipm.h
launch/: ipm.launch
msg/: CarDetection.msg  CarDetectionArray.msg
scripts/: car-detection-vis.py  createPointCloud2.py  ipm-pitch-sim.py  lsd.ipynb  mask2former.py  parkingline.py  ros-ipm.py
src/: ipm.cpp  parking-detect.cpp  parking-offline.cpp
